--- a/operator-strimzi/kafka-netflix.yaml
+++ b/operator-strimzi/kafka-netflix.yaml
@@ -1,7 +1,18 @@
+
+apiVersion: v1
+kind: Namespace
+metadata:
+  labels:
+    kubernetes.io/metadata.name: netflix
+  name: netflix
+
+--- 
+
 apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
   name: netflix
+  namespace: netflix
 spec:
   kafka:
     version: 3.3.1
