--- a/operator-strimzi/kafka-prime.yaml
+++ b/operator-strimzi/kafka-prime.yaml
@@ -1,7 +1,17 @@
+
+apiVersion: v1
+kind: Namespace
+metadata:
+  labels:
+    kubernetes.io/metadata.name: prime
+  name: prime
+
+---
 apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
   name: prime
+  namespace: prime
 spec:
   kafka:
     version: 3.3.1
