--- a/operator-strimzi/kafkaMirrorMaker2.yaml
+++ b/operator-strimzi/kafkaMirrorMaker2.yaml
@@ -2,6 +2,7 @@ apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaMirrorMaker2
 metadata:
   name: my-mirror-maker2
+  namespace: prime
 spec:
   version: 3.2.0
   connectCluster: "prime"  
