--- a/operator-strimzi/kustomization.yaml
+++ b/operator-strimzi/kustomization.yaml
@@ -3,7 +3,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- crd.yaml  
+- crd-netflix.yaml
+# - crd-prime.yaml  
 - kafka-netflix.yaml  
-- kafka-prime.yaml
-- kafkaMirrorMaker2.yaml  
+# - kafka-prime.yaml
+# - kafkaMirrorMaker2.yaml  
