--- a/manifest/kafka1.yaml
+++ b/manifest/kafka1.yaml
@@ -1,8 +1,13 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: kafka1
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: kafka-svc
-  namespace: default
+  namespace: kafka1
   labels:
     app: kafka-app
 spec:
@@ -19,12 +24,12 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: kafka
-  namespace: default
+  namespace: kafka1
   labels:
     app: kafka-app
 spec:
   serviceName: kafka-svc
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: kafka-app
@@ -48,11 +53,11 @@ spec:
             - containerPort: 9093
           env:
             - name: REPLICAS
-              value: '1'
+              value: '3'
             - name: SERVICE
               value: kafka-svc
             - name: NAMESPACE
-              value: default
+              value: kafka1
             - name: SHARE_DIR
               value: /mnt/kafka
             - name: CLUSTER_ID
